# demo_backend_svc

./: API.md  Makefile  README.md  pyproject.toml
migrations/: env.py
migrations/versions/: 9f24e4b0c062_add_role_column_to_user_table.py  f3e07d81b3b9_create_authentication_user_and_session_.py
src/demo_backend_svc/: app.py  main.py
src/demo_backend_svc/models/: __init__.py  auth.py  base.py
src/demo_backend_svc/routers/: login.py  logout.py  session.py  signup.py
tests/: conftest.py  test_login.py  test_logout.py  test_migrations.py  test_session.py  test_signup.py
